<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/langEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/english"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/langAzerbaijani"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/azerbaijan"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/langTurkish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/turkish"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/langRussian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/russian"
        android:textColor="@color/white"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="16sp" />
</LinearLayout>
